--- a/reto1.html
+++ b/reto1.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
 </head>
 <body>
     <header>
-        <img src="./Screenshot_20.png" alt="">
+        <img src="./Screenshot_20.png" alt="" border-radius=20%>
     </header>
     <h1>Juan Eduardo Torres Ramos</h1>
     <h2>Futuro Desarrollador Front-End - </h2>
     <p></p>
     <footer>
-        <a href="https://www.google.com.pe" target="_blank"><img src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
+        <a href="https://www.gmail.com" target="_blank"><img src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
         <a href="https://github.com/edu290386/SilabuzGrupo3.git" target="_blank"></a><img src="./GitHub-Mark.png" alt="">
-        <img src="" alt="">
+        <a href="http://www.youtube.com"></a><img src="" alt="">
     </footer>
 </body>
 </html>
