--- a/reto1.html
+++ b/reto1.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="./reto.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <img src="./Screenshot_20.png" alt="" border-radius=20%>
+        <img id="logo" src="./Screenshot_20.png" alt="" border-radius=20%>
     </header>
     <h1>Juan Eduardo Torres Ramos</h1>
-    <h2>Futuro Desarrollador Front-End - </h2>
-    <p></p>
+    <h2>Futuro Desarrollador Front-End</h2>
+    <p>HMTL - CSS - Javascript - React</p>
     <footer>
         <a href="https://www.gmail.com" target="_blank"><img src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
         <a href="https://github.com/edu290386/SilabuzGrupo3.git" target="_blank"></a><img src="./GitHub-Mark.png" alt="">
-        <a href="http://www.youtube.com"></a><img src="" alt="">
+        <a href="http://www.youtube.com"></a><img src="./1384060.png" alt="">
     </footer>
 </body>
 </html>
