--- a/reto1.html
+++ b/reto1.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./Screenshot_20.png" alt="">
+        <div>
+            <img id="logo" src="./Screenshot_20.png" alt="">
+        </div>
     </header>
     <h1>Juan Eduardo Torres Ramos</h1>
     <h2>Futuro Desarrollador Front-End</h2>
     <p>HMTL - CSS - Javascript - React</p>
     <footer>
-        <a href="https://www.gmail.com" target="_blank"><img src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
-        <a href="https://github.com/edu290386/SilabuzGrupo3.git" target="_blank"><img src="./GitHub-Mark.png" alt=""></a>
-        <a href="http://www.youtube.com"><img src="./1384060.png" alt=""></a>
+        <a href="https://www.gmail.com" target="_blank"><img id="icons" src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
+        <a href="https://github.com/edu290386/SilabuzGrupo3.git" target="_blank"><img id="icons" src="./GitHub-Mark.png" alt=""></a>
+        <a href="http://www.youtube.com"><img src="./1384060.png" alt="" id="icons"></a>
     </footer>
 </body>
 </html>
