--- a/reto1.html
+++ b/reto1.html
@@ -8,14 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div>
-            <img id="logo" src="./Screenshot_20.png" alt="">
-        </div>
-    </header>
-    <h1>Juan Eduardo Torres Ramos</h1>
-    <h2>Futuro Desarrollador Front-End</h2>
-    <p>HMTL - CSS - Javascript - React</p>
+    <div class="main">
+        <header>
+            <div>
+                <img id="logo" src="./Screenshot_20.png" alt="">
+            </div>
+        </header>
+        <h1>Juan Eduardo Torres Ramos</h1>
+        <h2 class="subtitulo">Futuro Desarrollador Front-End</h2>
+        <p class="parrafo">HMTL - CSS - Javascript - React</p>
+    </div>
     <footer>
         <a href="https://www.gmail.com" target="_blank"><img id="icons" src="./2560px-Gmail_icon_28202029.png" alt="" ></a>
         <a href="https://github.com/edu290386/SilabuzGrupo3.git" target="_blank"><img id="icons" src="./GitHub-Mark.png" alt=""></a>
