--- a/reto1.html
+++ b/reto1.html
@@ -15,7 +15,7 @@
             </div>
         </header>
         <h1>Juan Eduardo Torres Ramos</h1>
-        <h2 class="subtitulo">Futuro Desarrollador Front-End</h2>
+        <h2 class="subtitulo">Desarrollador Front-End</h2>
         <p class="parrafo">HMTL - CSS - Javascript - React</p>
     </div>
     <footer>
