--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reto.css">
-    <title>Document</title>
+    <!-- Primary Meta Tags -->
+    <title>Juan Eduardo Torres Ramos</title>
+    <meta name="title" content="Juan Eduardo Torres Ramos">
+    <meta name="description" content="Profile Web">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://silabuz-grupo3-q9vvj0hgr-edu290386.vercel.app/">
+    <meta property="og:title" content="Juan Eduardo Torres Ramos">
+    <meta property="og:description" content="Profile Web">
+    <meta property="og:image" content="https://i.postimg.cc/zfCNcx22/Screenshot-1.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://silabuz-grupo3-q9vvj0hgr-edu290386.vercel.app/">
+    <meta property="twitter:title" content="Juan Eduardo Torres Ramos">
+    <meta property="twitter:description" content="Profile Web">
+    <meta property="twitter:image" content="https://i.postimg.cc/zfCNcx22/Screenshot-1.png">
 </head>
 <body>
     <div class="main">
